feat(运维): 支持删除工程部署及运行态消息
